added music added styling